# EF-TTS

./: .gitignore  gen_mean_vec.py  gen_non_attr_vec.py  main.py  pyproject.toml
parler-tts/: CLAUDE.md  README.md  check_attention_mask.py  compare_encoder_vectors.py  compare_outputs.py  convenience_inference.py  debug_peft_vectors.py  explain_loss_structure.py  explain_processing_flow.py  generate_audio_comparison.py  inference_with_vectors.py  load_trained_peft_example.py  precomputed_vectors.pt  run_peft_training.py  show_vector_concat.py  simple_audio_test.py  simple_vector_test.py  summary.md  test.py  test_peft_generation.py  test_period_handling.py  test_untrained_generation.py  test_vector_order.py  test_vector_training.py  평균벡터로_음성생성실험.py
parler-tts/helpers/training_configs/: vector_training_expresso.json  vector_training_libritts.json  vector_training_voxceleb.json
parler-tts/output_dir_vector_training_expresso/: config.json  preprocessor_config.json  tokenizer_config.json
parler-tts/parler_tts/: __init__.py  configuration_parler_tts.py  modeling_parler_tts.py  peft_modules.py  vector_utils.py
parler-tts/tmp_dataset_audio_vector_expresso/eval/: data-00000-of-00008.arrow  data-00001-of-00008.arrow  data-00002-of-00008.arrow  data-00003-of-00008.arrow  data-00004-of-00008.arrow  data-00005-of-00008.arrow  data-00006-of-00008.arrow  data-00007-of-00008.arrow  state.json
parler-tts/tmp_dataset_audio_vector_expresso/train/: dataset_info.json  (+9 more)
parler-tts/training/: arguments.py  data.py  run_parler_tts_vector_training.py
parler-tts/wandb/: latest-run
(+151 files in other folders)
